--- a/front/index.html
+++ b/front/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/index.css" rel="stylesheet">
-    <title>Frontend Kanastra's Challenge</title>
+    <link href="index.css" rel="stylesheet">
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
